Further css optimizations

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
@@ -212,7 +212,7 @@
     background: #efefef;
     margin: 0 !important;
     padding-bottom: 20px;
-    .border-radius(@baseBlockRadius @baseBlockRadius 0 0);
+    .border-radius(@var_ContainerRadius @var_ContainerRadius 0 0);
 }
 .checkout-confirm-page .checkout-data > .confirm-order {
     border: 1px solid #bbb;
@@ -220,7 +220,7 @@
     border-top: none;
     padding: 20px;
     margin-bottom: 30px;
-    .border-radius(0 0 @baseBlockRadius @baseBlockRadius);
+    .border-radius(0 0 @var_ContainerRadius @var_ContainerRadius);
 }
 .checkout-confirm-page .confirm-order-legal-hint {
     border-left: 1px solid #bbb !important;
