--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -147,7 +147,7 @@
 
     <div class="page-body">
         @Html.Widget("orderdetails_page_top")
-        <dl class="x-order-overview dl-horizontal">
+        <dl class="dl-horizontal">
             <dt>@T("Order.Order#"):</dt>
             <dd>@Model.OrderNumber</dd>
 
