--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/forum.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/forum.less
@@ -221,6 +221,21 @@
 	margin-top: 20px;
 }
 
+.posttext .quotefrom {
+	color: inherit;
+	display: inline-block;
+	margin-bottom: 5px;
+	font-weight: bold;
+}
+
+.posttext blockquote {
+	margin-bottom: 0;
+}
+
+.post-content .posttime {
+	margin-bottom: 5px;
+}
+
 
 /* Forum Search
 ================================================ */
