--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -804,10 +804,11 @@ legend {
 		margin-right: 3em;
 		
 		font-family: inherit;
-		color: #888;
+		color: #444;
 		font-size: 14px;
 		line-height: 18px;
 		font-weight: 400;
+		text-transform: uppercase;
 		
 		text-shadow: 1px 1px 2px rgba(255,255,255,.5);
 	}
