Further fixes & improvements

--- a/src/Presentation/SmartStore.Web/Views/Boards/ForumGroup.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/ForumGroup.cshtml
@@ -10,6 +10,6 @@
     
     @Html.Partial("_SearchBox")
     <div class="forum-group">
-        @Html.Partial("_ForumGroup", Model)
+        @Html.Partial("_ForumGroupPartial", Model)
     </div>
 </div>
