--- a/src/Presentation/SmartStore.Web/Views/Boards/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Index.cshtml
@@ -23,7 +23,7 @@
     
     @foreach (var forumGroup in Model.ForumGroups)
     {
-        Html.RenderPartial("_ForumGroup", forumGroup);
+		Html.RenderPartial("_ForumGroupPartial", forumGroup);
     }
     
     @Html.Action("ActiveDiscussionsSmall")
