--- a/src/Presentation/SmartStore.Web/Views/Boards/ForumGroup.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/ForumGroup.Mobile.cshtml
@@ -8,6 +8,6 @@
 <div class="page forum-group-page">
     @Html.Partial("_SearchBox")
     <div class="forum-group">
-        @Html.Partial("_ForumGroup", Model)
+        @Html.Partial("_ForumGroupPartial", Model)
     </div>
 </div>
