--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Attributes.cshtml
@@ -168,7 +168,7 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.AttributesXml)
-                            .ClientTemplate("<#= AttributesXml #><br /><span style=\"color: red\"><#= Warnings #></span>")
+                            .ClientTemplate("<a href=\"#\" onclick=\"" + "OpenWindow('" + @Url.Content("~/Admin/Product/AttributeCombinationEditPopup/") + "<#= Id #>?btnId=btnRefreshCombinations&formId=product-form', 1000, 800, true); return false;\"><#= AttributesXml #></a><br /><span style=\"color: red\"><#= Warnings #></span>")
                             .Width(460)
                             .Encoded(false)
                             .ReadOnly();
@@ -194,16 +194,16 @@
                             .Template(item => @Html.SymbolForBool(item.AllowOutOfStockOrders))
                             .ClientTemplate(@Html.SymbolForBool("AllowOutOfStockOrders"))
                             .Centered();
-                        columns.Bound(x => x.Id)
-                            .Width(90)
-                            .Centered()
-                            .ClientTemplate("<button onclick=\"" + "OpenWindow('" + @Url.Content("~/Admin/Product/AttributeCombinationEditPopup/") + "<#= Id #>?btnId=btnRefreshCombinations&formId=product-form', 1000, 800, true); return false;\" class='btn'>" + @T("Admin.Common.Edit").Text + "</button>")
-                            .Title("");
+                        //columns.Bound(x => x.Id)
+                        //    .Width(90)
+                        //    .Centered()
+                        //    .ClientTemplate("<button onclick=\"" + "OpenWindow('" + @Url.Content("~/Admin/Product/AttributeCombinationEditPopup/") + "<#= Id #>?btnId=btnRefreshCombinations&formId=product-form', 1000, 800, true); return false;\" class='btn'>" + @T("Admin.Common.Edit").Text + "</button>")
+                        //    .Title("");
                         columns.Command(commands =>
-                            {
-                                commands.Delete().Localize(T);
-                            })
-                            .Width(90);
+                        {
+                            commands.Delete().Localize(T);
+                        })
+                        .Width(90);
                     })
                     .ClientEvents(events => events.OnRowDataBound("onRowDataBound_Combinations"))
                     .EnableCustomBinding(true))
