--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/ReportRegisteredCustomers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/ReportRegisteredCustomers.cshtml
@@ -9,25 +9,27 @@
         <h3>@T("Admin.Customers.Reports.RegisteredCustomers")</h3>
     </div>
     
-    <div class="widget-content">
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>@T("Admin.Customers.Reports.RegisteredCustomers.Fields.Period")</th>
-                    <th>@T("Admin.Customers.Reports.RegisteredCustomers.Fields.Customers")</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var x in Model)
-                {
-                    <tr>
-                        <td>@x.Period</td>
-                        <td>@x.Customers</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+	<div class="widget-content equalized-column">
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr>
+					<th>@T("Admin.Customers.Reports.RegisteredCustomers.Fields.Period")</th>
+					<th>@T("Admin.Customers.Reports.RegisteredCustomers.Fields.Customers")</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var x in Model)
+				{
+					<tr>
+						<td>@x.Period</td>
+						<td>@x.Customers</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+
+
 
 </div>
 
