--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/Index.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 	@Html.Action("WidgetsByZone", "Widget", new { widgetZone = "admin_dashboard_top" })
 
 	<div class="row-fluid">
-		<div class="span10 orderaveragereport">
+		<div class="span10">
 			@Html.Action("OrderAverageReport", "Order")
 			<div class="row-fluid">
 				<div class="span6">
@@ -35,9 +35,10 @@
 		</div>
 
 		<div class="span2">
-			@*@Html.Action("MarketplaceFeed")*@
+			@Html.Action("MarketplaceFeed")
 		</div>
 	</div>
 
 	@Html.Action("WidgetsByZone", "Widget", new { widgetZone = "admin_dashboard_bottom" })
 </div>
+
