--- a/src/Presentation/SmartStore.Web/Administration/Views/Home/MarketplaceFeed.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Home/MarketplaceFeed.cshtml
@@ -1,38 +1,51 @@
 ﻿@model List<FeedItemModel>
 
-<div style="text-transform: uppercase; font-size: 18px; padding-bottom: 15px">
-	<i class="fa fa-rss" style="font-size: 20px"></i>
-	Marketplace News
-</div>
+<div class="marketplace-feed">
+	<div class="marketplace-feed-title">
+		<i class="fa fa-rss"></i>
+		@T("Admin.Marketplace.News")
+	</div>
 
-<div style="margin-top: 15px">
-	@foreach (var item in Model.Take(6))
+	@if (!Model.Any())
 	{
-		<div style="margin-bottom: 15px; padding-bottom: 15px; border-bottom: 1px solid #ddd">
-			<div style="font-weight:bold; margin-bottom: 4px">
-				@if (item.Link.HasValue())
-				{
-					<a href="@item.Link" target="MarketplaceWindow"><strong>@item.Title</strong></a>
-				}
-				else
-				{
-					<strong>@item.Title</strong>
-				}
-			</div>
-
-			@*<div class="muted">@item.PublishDate</div>*@
-			<div>
-				@item.Summary
-				@if (item.Link.HasValue())
-				{
-					<a href="@item.Link">@T("Products.Longdesc.More").Text.ToLower()...</a>
-				}
-			</div>
-
-		</div>
+		<p class="muted">@T("Admin.Marketplace.ComingSoon")</p>
+		return;
 	}
 
+	@if (!ViewData.ModelState.IsValid)
+	{
+		@Html.ValidationSummary(true)
+		return;
+	}
+
+	<div class="marketplace-feed-body">
+		@foreach (var item in Model.Take(6))
+		{
+			<div class="marketplace-feed-item">
+				<div class="marketplace-feed-item-title">
+					@if (item.Link.HasValue())
+					{
+						<a href="@item.Link" target="MarketplaceWindow"><strong>@item.Title</strong></a>
+					}
+					else
+					{
+						<strong>@item.Title</strong>
+					}
+				</div>
+
+				<div>
+					<span class="muted">@item.PublishDate - </span> @item.Summary
+					@if (item.Link.HasValue())
+					{
+						<a href="@item.Link">@T("Products.Longdesc.More").Text.ToLower()...</a>
+					}
+				</div>
+
+			</div>
+		}
+	</div>
+
 	<a class="btn btn-primary btn-large btn-block" href="http://community.smartstore.com/index.php?/files/" target="MarketplaceWindow">
-		Visit Marketplace
+		@T("Admin.Marketplace.Visit")
 	</a>
 </div>
