--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/BestsellersBriefReportByQuantity.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/BestsellersBriefReportByQuantity.cshtml
@@ -8,28 +8,30 @@
         <h3>@T("Admin.SalesReport.BestSellers.ByQuantity")</h3>
     </div>
     
-    <div class="widget-content">
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>@T("Admin.SalesReport.Bestsellers.Fields.Name")</th>
-                    <th>@T("Admin.SalesReport.Bestsellers.Fields.TotalQuantity")</th>
-                    <th>@T("Admin.SalesReport.Bestsellers.Fields.TotalAmount")</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var x in Model)
-                {
-                    <tr>
-                        <td>
+	<div class="widget-content equalized-column">
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr>
+					<th>@T("Admin.SalesReport.Bestsellers.Fields.Name")</th>
+					<th>@T("Admin.SalesReport.Bestsellers.Fields.TotalQuantity")</th>
+					<th>@T("Admin.SalesReport.Bestsellers.Fields.TotalAmount")</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var x in Model)
+				{
+					<tr>
+						<td>
 							@Html.LabeledProductName(x.ProductId, x.ProductName, x.ProductTypeName, x.ProductTypeLabelHint)
-                        </td>
-                        <td>@x.TotalQuantity</td>
-                        <td>@x.TotalAmount</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+						</td>
+						<td>@x.TotalQuantity</td>
+						<td>@x.TotalAmount</td>
+					</tr>
+				}
+			</tbody>
+		</table>
+	</div>
+
+
 
 </div>
