--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/OrderIncompleteReport.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/OrderIncompleteReport.cshtml
@@ -9,27 +9,34 @@
         <h3>@T("Admin.SalesReport.Incomplete")</h3>
     </div>
     
-    <div class="widget-content">
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>@T("Admin.SalesReport.Incomplete.Item")</th>
-                    <th>@T("Admin.SalesReport.Incomplete.Total")</th>
-                    <th>@T("Admin.SalesReport.Incomplete.Count")</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var x in Model)
-                {
-                    <tr>
-                        <td>@x.Item</td>
-                        <td>@x.Total</td>
-                        <td>@x.Count</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+	<div class="widget-content equalized-column">
+		<table class="table table-striped table-hover">
+			<thead>
+				<tr>
+					<th>@T("Admin.SalesReport.Incomplete.Item")</th>
+					<th>@T("Admin.SalesReport.Incomplete.Total")</th>
+					<th>@T("Admin.SalesReport.Incomplete.Count")</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var x in Model)
+				{
+					<tr>
+						<td>@x.Item</td>
+						<td>@x.Total</td>
+						<td>@x.Count</td>
+					</tr>
+				}
+				<tr>
+					<td>&nbsp;</td>
+					<td>&nbsp;</td>
+					<td>&nbsp;</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+
+
 
 </div>
 
