--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -270,12 +270,10 @@ th label {
 .nav > li > a > .fa {
 	vertical-align: baseline;
 	margin-right: 4px;
-    color: #727272;
 }
 
-.nav > li > a:hover > .fa, 
-.nav > li.active > a > .fa {
-    color: @textColor;
+.nav > li > a > .chevron {
+	margin-left: 3px;
 }
 
 .tabs-left .nav > li > a > .fa {
