--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductListOptions.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductListOptions.cshtml
@@ -1,19 +1,19 @@
 ﻿@model PagingFilteringModel
 @using SmartStore.Web.Models.Catalog;
 
-@helper CreateOptionChooser(IList<ListOptionItem> options, string label = "", bool rightFloat = false)
+@helper CreateOptionChooser(IList<ListOptionItem> options, string label = "", string icon = "", bool rightFloat = false)
 {
     var selectedOption = options.FirstOrDefault(x => x.Selected);
     var floatClass = rightFloat ? "pull-right" : "pull-left";
-    if (label.HasValue())
-	{
-        <label class="@floatClass">@label</label>
-    }
     <div class="btn-group @floatClass">
-        <a class="btn" href="@selectedOption.Url" title="@selectedOption.Text">@selectedOption.Text</a>
-        <a class="btn dropdown-toggle" data-toggle="dropdown" href="javascript:void()" rel="nofollow">
-            <span class="fa fa-caret-down"></span>
-        </a>
+		<a class="btn dropdown-toggle tooltip-toggle" data-toggle="dropdown" href="#" rel="nofollow" title="@label: @selectedOption.Text">
+			@if (icon.HasValue())
+			{
+				<i class="fa fa-fw fa-@icon"></i>
+			}
+			@selectedOption.Text
+			<span class="fa fa-fw fa-caret-down"></span>
+		</a>
         <ul class="dropdown-menu">
             @foreach(var opt in options)
 			{
@@ -25,14 +25,14 @@
     </div>
 }
 
-<div class="product-list-options well well-small clearfix">
+<div class="product-list-options clearfix">
     @if (Model.AllowProductViewModeChanging)
     {
         <div class="product-viewmode pull-right">
             <div class="btn-group" data-toggle="buttons-radio">
                 @foreach (var mode in Model.AvailableViewModes)
                 {
-                    <a href="@mode.Url" class='btn@(mode.Selected ? " active" : "")' rel="tooltip nofollow" title='@T("Categories.ViewMode"): @mode.Text'>
+                    <a href="@mode.Url" class='btn@(mode.Selected ? " active" : "") tooltip-toggle' rel="tooltip nofollow" title='@T("Categories.ViewMode"): @mode.Text'>
                         @if ((string)mode.ExtraData == "grid") {
                             <i class="fa fa-th"></i>
                         }
@@ -43,16 +43,15 @@
                 }
             </div>
         </div>
-    }
-    @*sorting*@
-    @if (Model.AllowProductSorting)
-    {
-        @CreateOptionChooser(Model.AvailableSortOptions, T("Categories.OrderBy").Text)
-    }
-    
-    @*page size *@
-    @if (Model.AllowCustomersToSelectPageSize)
-    {
-        @CreateOptionChooser(Model.PageSizeOptions, T("Categories.PageSize").Text)
-    }
+	}
+	@*sorting*@
+	@if (Model.AllowProductSorting)
+	{
+		@CreateOptionChooser(Model.AvailableSortOptions, T("Categories.OrderBy").Text, "sort")
+	}
+	@*page size *@
+	@if (Model.AllowCustomersToSelectPageSize)
+	{
+		@CreateOptionChooser(Model.PageSizeOptions, T("Categories.PageSize").Text, "sort-amount-asc")
+	}
 </div>
