--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/catalog.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/catalog.less
@@ -70,11 +70,27 @@
 .category-description {
 	margin-bottom: 20px;
 }
-.product-list-options label { margin: 6px 7px 0 7px }
-.product-list-options .btn-group .pull-left {
-    margin-right: 18px;
+
+//
+// Product List Options (paging, sorting etc.)
+// --------------------------------------------------
+
+.product-list-options {
+	padding: 10px 0 15px 0;
+	margin-bottom: 15px;
+	border-bottom: 1px solid #ddd;
+	border-bottom-color: rgba(0,0,0, 0.12);
 }
-.product-list-options .btn { max-width: 160px; .text-overflow(); }
-.product-list-options .product-viewmode .btn { padding-left: 8px; padding-right: 8px }
+
+.product-list-options label { 
+	margin: 6px 7px 0 7px 
+}
+
+.product-list-options .btn { 
+	border-radius: 0 0 0 0 !important;
+	padding: 10px;
+	.text-overflow(); 
+}
+
 
 
