--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/checkout.less
@@ -208,6 +208,7 @@
 }
 
 .checkout-confirm-page .order-summary-content form {
+    border: 1px solid #bbb;
     border-bottom: none;
     background: #efefef;
     margin: 0 !important;
