AJAX URL for file upload in public store should not be encoded

--- a/src/Presentation/SmartStore.Web/Views/Product/_Attributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/_Attributes.cshtml
@@ -171,7 +171,7 @@
                                 elFile = el.find('.uploaded-file');
 
                             $('#@clientId').fileupload({
-                                url: '@(Url.Action("UploadFileProductAttribute", "ShoppingCart", new { productId = @attribute.ProductId, productAttributeId = @attribute.ProductAttributeId }))',
+                                url: '@Html.Raw(Url.Action("UploadFileProductAttribute", "ShoppingCart", new { productId = attribute.ProductId, productAttributeId = attribute.ProductAttributeId }))',
                                 dataType: 'json',
                                 acceptFileTypes: new RegExp('@(allowedFileExtensions)', 'i'),
                                 done: function (e, data) {
